--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="vi">
 
 <head>
@@ -107,8 +107,8 @@
                     </label>
                     <select id="algorithmSelect" class="royal-select">
                         <option value="auto">🔄 Tự động (Theo số người)</option>
-                        <option value="pair">👥 Ghép Cặp (Số chẵn)</option>
-                        <option value="roundrobin">🔁 Luân Chuyển (Số lẻ)</option>
+                        <option value="pair">🔄 Ghép Cặp (Số chẵn)</option>
+                        <option value="roundrobin">🔄 Luân Chuyển (Số lẻ)</option>
                     </select>
                     <p class="royal-algorithm-hint" id="algorithmHint">Trí tuệ hoàng gia tự động chọn thuật toán tối ưu.
                     </p>
@@ -252,7 +252,7 @@
                     <div class="premium-divider"></div>
                     <div class="premium-quote">"Code một lần - Dùng một đời"</div>
                     <div class="premium-divider"></div>
-                    <div class="premium-version-tag">v6.0.0 LUNAR EDITION</div>
+                    <div class="premium-version-tag">v6.1.0 SUPER AUDIT</div>
                 </div>
             </footer>
         </main>
